[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Enemies/EnemyStateMachine.gd" type="Script" id=1]
[ext_resource path="res://Scripts/d.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Objects/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Objects/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Enemies/Enemy.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=7]
radius = 8.0

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "death"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=12]
radius = 24.0

[sub_resource type="CircleShape2D" id=13]
radius = 32.0

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox:active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox:active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "death"
length = 0.2

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Hurtbox:active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("InvincibilityTimer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox:active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 1192.43

[node name="Enemy" type="KinematicBody2D" groups=["enemies"]]
collision_layer = 513
collision_mask = 520
script = ExtResource( 5 )
i_frames = 0.3

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, 0.5 )
scale = Vector2( 0.08, 0.0816667 )
texture = ExtResource( 2 )

[node name="SpriteEffectPlayer" type="AnimationPlayer" parent="Sprite"]
anims/RESET = SubResource( 11 )
anims/death = SubResource( 9 )
anims/hurt = SubResource( 10 )

[node name="Hitbox" parent="." groups=["enemy hitboxes"] instance=ExtResource( 4 )]
collision_layer = 1026
collision_mask = 288
__meta__ = {
"_edit_pinned_properties_": [ "active" ]
}
damage = 10.0
stun = 5.0
pushback = 500.0
active = true

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 12 )

[node name="Hurtbox" parent="." groups=["enemy hurtboxes"] instance=ExtResource( 3 )]
collision_layer = 2052
collision_mask = 144
__meta__ = {
"_edit_pinned_properties_": [ "active" ]
}
active = true

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 13 )

[node name="InvincibilityTimer" type="Timer" parent="."]
pause_mode = 1
process_mode = 0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 6 )
anims/death = SubResource( 8 )
anims/hurt = SubResource( 5 )

[node name="ChaseRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4096
input_pickable = false
monitorable = false

[node name="ChaseRangeShape" type="CollisionShape2D" parent="ChaseRange"]
shape = SubResource( 2 )

[node name="NavAgent" type="NavigationAgent2D" parent="."]

[node name="PathfindingTimer" type="Timer" parent="."]
pause_mode = 1
process_mode = 0
wait_time = 0.05
autostart = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[connection signal="area_entered" from="Hitbox" to="StateMachine" method="_on_EnemyHitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="StateMachine" method="_on_EnemyHurtbox_area_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="StateMachine" method="_on_InvincibilityTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_EnemyAnimationPlayer_animation_finished"]
[connection signal="body_entered" from="ChaseRange" to="StateMachine" method="_on_ChaseRange_body_entered"]
[connection signal="body_exited" from="ChaseRange" to="StateMachine" method="_on_ChaseRange_body_exited"]
[connection signal="timeout" from="PathfindingTimer" to="StateMachine" method="_on_PathfindingTimer_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
